# jrdb

./: Cargo.toml  README.md  main.db
example/: exp-1.rs
src/: main.rs
src/jrdb/: jrdb_type.rs  lib.rs  macros.rs  mod.rs
