[package]
name = "rust-jrdb"
version = "0.0.1"
authors = ["LeeJiaLe <36293056+LeeJiaLe@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jrdb"
path = "src/jrdb/lib.rs"

[[bin]]
name = "example"
path = "example/exp-1.rs"

[dependencies]
byteorder = "1.3.4"